# src/controller/menu_controller.go
@@ -1,0 +1,22 @@
+package controller
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+
+)
+
+type MenuController struct{}
+
+// @Tags Root
+// @Accept json
+// @Produce json
+// @accept application/x-json-stream
+// @Success 200
+// @Router /menu/top [get]    
+func (pc MenuController) Top(c *gin.Context) {
+    c.JSON(http.StatusOK, gin.H{
+        "message": "hello world",
+    })
+}
