# src/controller/root_controller.go
@@ -1,4 +1,4 @@
-package root
+package controller
 
 import (
 	"net/http"
@@ -7,9 +7,10 @@ import (
     "github.com/ryokubozono/go-docker/service"
 	"github.com/ryokubozono/go-docker/entity"
     "log"
+    "github.com/gin-contrib/sessions"
 )
 
-type Controller struct{}
+type RootController struct{}
 
 // @Tags Root
 // @Accept json
@@ -17,7 +18,7 @@ type Controller struct{}
 // @accept application/x-json-stream
 // @Success 200
 // @Router / [get]    
-func (pc Controller) RootGet(c *gin.Context) {
+func (pc RootController) RootGet(c *gin.Context) {
     c.JSON(http.StatusOK, gin.H{
         "message": "hello world",
     })
@@ -29,7 +30,7 @@ func (pc Controller) RootGet(c *gin.Context) {
 // @accept application/x-json-stream
 // @Success 200
 // @Router /ping [get]
-func (pc Controller) DbPing(c *gin.Context) {
+func (pc RootController) DbPing(c *gin.Context) {
     log.Print("call DbPing")
     var s root.Service
     user, _ := s.FirstSampleTable(c)
@@ -44,21 +45,19 @@ func (pc Controller) DbPing(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @accept application/x-json-stream
-// @Param username body entity.UsernamePasswordSignUpRequest true "UsernamePasswordSignUpRequest"
+// @Param username body entity.CreateUserRequest true "CreateUserRequest"
 // @Success 200
-// @Router /signup [post]
-func (pc Controller) SignUp(c *gin.Context) {
+// @Router /create_user [post]
+func (pc RootController) CreateUser(c *gin.Context) {
 
-    var request entity.UsernamePasswordSignUpRequest
+    var request entity.CreateUserRequest
 
-    err := c.BindJSON(&request)
-
-    if err != nil {
+    if err := c.BindJSON(&request); err != nil {
 		c.String(http.StatusBadRequest, "Bad request")
         return    
     } else {
         var s root.Service
-        err := s.UsernamePasswordSignUp(request.Username, request.Password)
+        err := s.CreateUser(request.Username, request.Password)
         if err != nil {
             c.String(http.StatusBadRequest, "Bad request")
             return
@@ -67,4 +66,44 @@ func (pc Controller) SignUp(c *gin.Context) {
 
     c.Status(http.StatusOK)
     return
+}
+
+// @Tags Root
+// @Accept json
+// @Produce json
+// @accept application/x-json-stream
+// @Param username body entity.LoginRequest true "LoginRequest"
+// @Success 200
+// @Router /login [post]
+func (pc RootController) Login(c *gin.Context) {
+    session := sessions.Default(c)
+
+    var request entity.LoginRequest
+
+    if err := c.BindJSON(&request); err != nil {
+        c.String(http.StatusBadRequest, "Bad request")
+        return
+    } else {
+        var s root.Service
+        if err := s.Login(request.Username, request.Password); err != nil {
+            c.String(http.StatusBadRequest, "Bad request")
+            return
+        } else {
+            session.Set("Username", request.Username)
+            session.Save()
+            return
+        }
+    }
+}
+
+// @Tags Root
+// @Accept json
+// @Produce json
+// @accept application/x-json-stream
+// @Success 200
+// @Router /logout [get]    
+func (pc RootController) Logout(c *gin.Context) {
+    session := sessions.Default(c)
+    session.Clear()
+    session.Save()
 }
